# AIVideoFaceSwap

./: CMakeLists.txt  README.md  glad.c  read_images.cpp  test_read_images.cpp  triangle.cpp  video_play_openGL.cpp  video_play_opencv.cpp
glad/: glad.h
